--- a/css/style.css
+++ b/css/style.css
@@ -5,18 +5,39 @@
 }
 .left-bar {
   height: 85vh;
-  margin-top: 1%;
+
   overflow-y: scroll;
   position: sticky;
   top: 0;
 }
 .right-bar {
   height: 85vh;
-  margin-top: 1%;
+
   position: sticky;
   top: 0;
 }
-a{
+a {
   text-decoration: none;
   color: rgb(117, 117, 117);
+}
+.main-section {
+  margin-top: 2%;
+}
+.main-section h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: rgb(117, 117, 117);
+}
+button{
+  color: rgb(29, 21, 21);
+  border: none;
+  border-radius: 5px;
+  padding: 10px;
+  font-size: 1.1rem;
+  font-weight: bold;
+  cursor: pointer;
+}
+button:hover{
+  background-color: rgb(29, 21, 21);
+  color: white;
 }
